# img-compressio

./: .gitignore  README.md  compressio.py  compressio_gui.py  compressio_prototype.py  gui.ui  pyproject.toml  requirements.txt
img-compressio/src/: compressio.py  compressio_gui.py
src/: compressio.py
